grammar.js
    stylesheet: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.property_statement,
        $.container_statement,
        $.use_statement,
        $.forward_statement,
        $.mixin_statement,
        $.include_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.layer_statement,
        $.scope_statement,
        $.starting_style_statement,
        $.view_transition_statement,
        $.font_face_statement,
        $.counter_style_statement,
        $.position_try_statement,
        $.font_palette_values_statement,
        $.page_statement,
        $.font_feature_values_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        $.placeholder,
        $.sassdoc_block,
        $.sassdoc_delimiter,
      ),

    // Statements

    media_statement: ($) => seq("@media", sep1(",", $._query), $.block),

    postcss_statement: ($) =>
      prec(
        -1,
        seq(
          $.at_keyword,
          repeat(alias($._apply_value, $.plain_value)),
          optional($.important),
          ";",
        ),
      ),

    at_rule: ($) => seq($.at_keyword, sep(",", $._query), choice(";", $.block)),

    parameters: ($) =>
      seq(
        "(",
        choice(
          // Only regular parameters, or…
          sep(",", $.parameter),
          // …one or more parameters followed by a rest parameter, or…
          seq(sep1(",", $.parameter), ",", $.rest_parameter),
          // …a lone rest parameter.
          $.rest_parameter,
        ),
        ")",
      ),

    parameter: ($) =>
      seq(
        alias($._variable_identifier, $.variable_name),
        optional(seq(":", alias($._value, $.default_value))),
      ),

    mixin_statement: ($) =>
      seq(
        "@mixin",
        alias($._identifier, $.name),
        optional($.parameters),
        $.block,
      ),

    layer_statement: ($) =>
      choice(
        seq("@layer", optional($.layer_name), $.block),
        seq("@layer", sep1(",", $.layer_name), ";"),
      ),

    layer_name: ($) =>
      seq(
        $._identifier_with_interpolation,
        repeat(seq(".", $._identifier_with_interpolation)),
      ),

    at_root_statement: ($) => seq("@at-root", $.selectors, $.block),

    debug_statement: ($) => seq("@debug", $._value, ";"),

    // Rule sets

    rule_set: ($) => seq($.selectors, $.block),

    selectors: ($) => sep1(",", choice($._selector, $._block_direct_selector)),

    block: ($) =>
      seq(
        "{",
        repeat($._block_item),
        optional(alias($.last_declaration, $.declaration)),
        "}",
      ),

    _block_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.property_statement,
        $.container_statement,
        $.postcss_statement,
        $.mixin_statement,
        $.include_statement,
        $.extend_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.return_statement,
        $.layer_statement,
        $.scope_statement,
        $.starting_style_statement,
        $.view_transition_statement,
        $.font_face_statement,
        $.counter_style_statement,
        $.position_try_statement,
        $.font_palette_values_statement,
        $.page_statement,
        $.font_feature_values_statement,
        $.at_root_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        alias($.content_at_rule, $.at_rule),
        $.placeholder,
      ),

    _block_direct_selector: ($) =>
      choice(
        alias($._block_direct_child_selector, $.child_selector),
        alias($._block_direct_sibling_selector, $.sibling_selector),
        alias(
          $._block_direct_adjacent_sibling_selector,
          $.adjacent_sibling_selector,
        ),
        alias($._child_selector_block_direct, $.child_selector),
        alias($._sibling_selector_block_direct, $.sibling_selector),
        alias(
          $._adjacent_sibling_selector_block_direct,
          $.adjacent_sibling_selector,
        ),
      ),

    _selector: ($) =>
      choice(
        $.universal_selector,
        alias($._identifier_with_interpolation, $.tag_name),
        $.class_selector,
        $.nesting_selector,
        $.pseudo_class_selector,
        $.pseudo_element_selector,
        $.id_selector,
        $.attribute_selector,
        $.string_value,
        $.child_selector,
        $.descendant_selector,
        $.sibling_selector,
        $.adjacent_sibling_selector,
        $.namespace_selector,
        $.interpolation,
      ),

    placeholder_selector: ($) =>
      prec(
        1,
        seq(
          "%",
          $._no_whitespace,
          alias($._identifier_with_interpolation, $.placeholder_name),
        ),
      ),

    class_selector: ($) =>
      prec(
        1,
        seq(
          optional($._selector),
          choice(seq(".", $._no_whitespace), $.nesting_selector),
          alias($._identifier_with_interpolation, $.class_name),
        ),
      ),

    pseudo_class_selector: ($) =>
      seq(
        optional($._selector),
        alias($._pseudo_class_selector_colon, ":"),
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.class_name),
        optional(alias($.pseudo_class_arguments, $.arguments)),
      ),

    declaration: ($) =>
      choice(
        // Variable
        seq(
          alias($._variable_identifier, $.variable_name),
          ":",
          $._value,
          repeat(seq(optional(","), $._value)),
          optional(choice($.default, $.global)),
          ";",
        ),

        // Property
        seq(
          alias($._identifier_with_interpolation, $.property_name),
          ":",
          $._value,
          repeat(seq(optional(","), $._value)),
          optional($.important),
          ";",
        ),
      ),

    // Only seems to be used to declare properties and not variables.
    important: (_) => "!important",
    default: (_) => "!default",
    global: (_) => "!global",

    // Media queries

    _query: ($) =>
      choice(
        alias($._identifier_with_interpolation, $.keyword_query),
        $.feature_query,
        $.range_query,
        $.binary_query,
        $.unary_query,
        $.selector_query,
        $.font_tech_query,
        $.font_format_query,
        $.at_rule_query,
        $.named_feature_query,
        $.style_query,
        $.scroll_state_query,
        $.parenthesized_query,
      ),

    range_query: ($) =>
      prec.dynamic(
        1,
        seq(
          "(",
          choice(
            // Feature on left: (width > 400px), (width >= 400px)
            seq(
              alias($._identifier, $.feature_name),
              alias($._range_operator, $.range_operator),
              $._range_value,
            ),
            // Value on left: (400px < width), (400px <= width < 800px)
            seq(
              $._range_value,
              alias($._range_operator, $.range_operator),
              alias($._identifier, $.feature_name),
              optional(
                seq(alias($._range_operator, $.range_operator), $._range_value),
              ),
            ),
          ),
          ")",
        ),
      ),

    _range_operator: (_) => choice("<", ">", "<=", ">="),

    // Values allowed in range queries (no binary expressions to avoid operator conflicts)
    _range_value: ($) =>
      choice(
        $.integer_value,
        $.float_value,
        alias($._variable_identifier, $.variable_value),
      ),

    font_tech_query: ($) =>
      seq("font-tech", "(", alias($._identifier, $.feature_value), ")"),

    style_condition: ($) =>
      seq(
        alias($._identifier, $.property_name),
        optional(seq(":", repeat1($._value))),
      ),

    // Container scroll-state query: scroll-state(stuck: top)
    _value: ($) =>
      prec(
        -1,
        choice(
          alias($._identifier_with_interpolation, $.plain_value),
          $.variable_module,
          alias($._variable_identifier, $.variable_value),
          $.boolean_value,
          $.null_value,
          alias($._plain_value, $.plain_value),
          $.color_value,
          $.integer_value,
          $.float_value,
          $.string_value,
          $.grid_value,
          $.binary_expression,
          $.unary_expression,
          $.list_value,
          $.map_value,
          $.parenthesized_value,
          $.call_expression,
          $.attr_expression,
          $.if_expression,
          alias($.nesting_selector, $.nesting_value),
        ),
      ),

    // Since a `url` function allows a greater breadth of unquoted characters
    // than would be allowed in any other context, we need a version of
    // `_value` that is allowed to exist inside of `url`. Lots of these would
    // be nonsensical, but they still compile.
    boolean_value: (_) => choice("true", "false"),
    null_value: (_) => "null",

    parenthesized_value: ($) => seq("(", $._value, ")"),

    map_value: ($) => seq("(", sep(",", $.map_pair), optional(","), ")"),

    map_pair: ($) =>
      prec(
        2,
        seq(
          field("key", $._value),
          ":",
          field("value", $._value),
          repeat(field("value", $._value)),
          optional($.default),
        ),
      ),

    color_value: ($) =>
      seq("#", alias(token.immediate(/[0-9a-fA-F]{3,8}/), $.hex_color)),

    string_value: ($) =>
      choice($._single_quoted_string_value, $._double_quoted_string_value),

    _single_quoted_string_value: ($) =>
      seq(
        "'",
        repeat(choice($._single_quoted_string_segment, $.interpolation)),
        "'",
      ),

    _double_quoted_string_value: ($) =>
      seq(
        '"',
        repeat(choice($._double_quoted_string_segment, $.interpolation)),
        '"',
      ),

    // Only used in certain places where SCSS will tolerate an unquoted string
    // that would normally be ambiguous, like a URL.
    integer_value: ($) =>
      seq(token(seq(optional(choice("+", "-")), /\d+/)), optional($.unit)),

    float_value: ($) =>
      seq(
        token(
          seq(
            optional(choice("+", "-")),
            /\d*/,
            choice(
              seq(".", /\d+/),
              seq(/[eE]/, optional("-"), /\d+/),
              seq(".", /\d+/, /[eE]/, optional("-"), /\d+/),
            ),
          ),
        ),
        optional($.unit),
      ),

    unit: (_) => choice(token.immediate(/[a-zA-Z]+/), token.immediate("%")),

    grid_value: ($) => seq("[", sep1(",", $._value), "]"),

    _expression: ($) => choice($.call_expression, $.binary_expression),

    call_expression: ($) =>
      choice(
        seq(
          field("name", alias("url", $.function_name)),
          field("arguments", alias($.arguments_for_url, $.arguments)),
        ),
        seq(
          field("name", alias("if", $.function_name)),
          field("arguments", $.arguments),
        ),
        seq(
          optional(
            seq(
              field("module", alias($._identifier, $.module)),
              token.immediate("."),
              $._no_whitespace,
            ),
          ),
          field("name", alias($._identifier, $.function_name)),
          field("arguments", $.arguments),
        ),
      ),

    // CSS attr() function
    attr_expression: ($) =>
      prec.dynamic(
        1,
        seq(
          alias("attr", $.function_name),
          token.immediate("("),
          field("name", alias($._identifier, $.attribute_name)),
          optional(field("type", $.attr_type)),
          optional(seq(",", field("fallback", $.attr_fallback))),
          ")",
        ),
      ),

    // <attr-type> = type( <syntax> ) | raw-string | number | <attr-unit>
    attr_type: ($) =>
      choice(
        $.attr_type_function,
        alias("raw-string", $.keyword),
        alias("number", $.keyword),
        alias($._plain_value, $.unit),
        alias("%", $.unit),
      ),

    // type( <syntax> ) where <syntax> is a pipe-separated list of type names,
    // or `*` for the universal syntax (accepts any value)
    attr_type_function: ($) =>
      seq(
        alias("type", $.function_name),
        token.immediate("("),
        choice("*", sep1("|", $.syntax_type)),
        ")",
      ),

    // A CSS syntax type: < identifier > (e.g. <number>, <string>, <color>)
    syntax_type: (_) => seq("<", /[a-zA-Z][-a-zA-Z]*/, ">"),

    attr_fallback: ($) => repeat1($._value),

    if_expression: ($) =>
      prec.dynamic(
        1,
        seq(
          alias("if", $.function_name),
          token.immediate("("),
          optional(seq(sep1(";", $.if_branch), optional(";"))),
          ")",
        ),
      ),

    if_branch: ($) =>
      seq(
        field("condition", $.if_condition),
        ":",
        field("value", repeat1($._value)),
      ),

    if_condition: ($) =>
      choice(
        $.if_style_condition,
        $.if_media_condition,
        $.if_supports_condition,
        $.if_sass_condition,
        $.if_else_condition,
      ),

    if_style_condition: ($) =>
      seq(
        "style",
        "(",
        sep1(
          choice("and", "or"),
          choice(
            $.style_condition,
            seq("not", $.style_condition),
            seq("(", $.style_condition, ")"),
          ),
        ),
        ")",
      ),

    if_media_condition: ($) => seq("media", "(", $._if_media_query, ")"),

    _if_media_query: ($) =>
      choice(
        alias($._identifier_with_interpolation, $.keyword_query),
        alias($._if_media_feature_query, $.feature_query),
        alias($._if_media_range_query, $.range_query),
        alias($._if_media_binary_query, $.binary_query),
        alias($._if_media_unary_query, $.unary_query),
        seq("(", $._if_media_query, ")"),
      ),

    if_supports_condition: ($) =>
      seq(
        "supports",
        "(",
        choice(
          seq(alias($._identifier, $.feature_name), ":", repeat1($._value)),
          seq("selector", "(", $._selector, ")"),
          $._query,
        ),
        ")",
      ),

    if_sass_condition: ($) => seq("sass", "(", $._value, ")"),

    if_else_condition: (_) => "else",

    // NOTE: Technically, `/` should only be allowed in binary
    // expressions if we're inside a `calc`. They're not a part of Dart
    // Sass, but even tree-sitter-css still treats them as binary
    // operators in places where they aren't (e.g., grid value syntax),
    // so we'll leave this the way it is for now.
    _binary_operator: (_) =>
      prec(
        3,
        // TODO: Operator precedence will be painful if it ever has to be implemented:
        // https://sass-lang.com/documentation/operators/#order-of-operations
        choice(
          "+",
          "-",
          "*",
          "/",
          "%",
          "==",
          "<",
          ">",
          "!=",
          "<=",
          ">=",
          "and",
          "or",
        ),
      ),

    _unary_operator: (_) => prec(2, choice("not", "+", "-", "/")),

    binary_expression: ($) =>
      prec.left(
        2,
        seq(
          field("left", $._value),
          field("operator", $._binary_operator),
          field("right", $._value),
        ),
      ),

    unary_expression: ($) =>
      prec.left(2, seq(field("operator", $._unary_operator), $._value)),

    at_keyword: (_) => /@[a-zA-Z-_]+/,
